--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.7",
-    "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^9.0.0"
+    "mocha": "^9.0.0",
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
